objects/ssot__AssessmentEnvelope__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnvelopeNotificationStatus__c</fullName>
        <label>Envelope Notification Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnvelopeStatus__c</fullName>
        <label>Envelope Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>ExpirationDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Envelope Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientId__c</fullName>
        <label>Recipient</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientObject__c</fullName>
        <label>Recipient Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestReferenceId__c</fullName>
        <label>Request Reference</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestReferenceObject__c</fullName>
        <label>Request Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291045426_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentEnvelope_RecipientId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AssessmentEnvelope_RecipientId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1720291045426_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291282387_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentEnvelope_RecipientId_map_A_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AssessmentEnvelope_RecipientId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1720291282387_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291812443_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentEnvelope_RequestReferenceI_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>AssessmentEnvelope_RequestReferenceI_rel</relationshipLabel>
        <relationshipName>rel_1720291812443_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>